--- a/back/models/item_recommender.ipynb
+++ b/back/models/item_recommender.ipynb
@@ -18,29 +18,29 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Okptqzp_pQQO",
-        "outputId": "5f1eb109-de4e-462f-86c2-ba1faf2d5e2e"
+        "outputId": "8a250bb7-302f-4ea9-b0a5-c93ea1ca47b8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-05-28 19:23:22--  https://drive.usercontent.google.com/download?id=1vh3GYfYIaxPokXppuQuzt4qUop4DtyqI&export=download&authuser=1&confirm=t\n",
-            "Resolving drive.usercontent.google.com (drive.usercontent.google.com)... 64.233.189.132, 2404:6800:4008:c07::84\n",
-            "Connecting to drive.usercontent.google.com (drive.usercontent.google.com)|64.233.189.132|:443... connected.\n",
+            "--2024-05-29 08:51:06--  https://drive.usercontent.google.com/download?id=1vh3GYfYIaxPokXppuQuzt4qUop4DtyqI&export=download&authuser=1&confirm=t\n",
+            "Resolving drive.usercontent.google.com (drive.usercontent.google.com)... 142.250.145.132, 2a00:1450:4013:c14::84\n",
+            "Connecting to drive.usercontent.google.com (drive.usercontent.google.com)|142.250.145.132|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 76333184 (73M) [application/octet-stream]\n",
             "Saving to: ‘features.npy’\n",
             "\n",
-            "features.npy        100%[===================>]  72.80M   241MB/s    in 0.3s    \n",
+            "features.npy        100%[===================>]  72.80M   122MB/s    in 0.6s    \n",
             "\n",
-            "2024-05-28 19:23:24 (241 MB/s) - ‘features.npy’ saved [76333184/76333184]\n",
+            "2024-05-29 08:51:10 (122 MB/s) - ‘features.npy’ saved [76333184/76333184]\n",
             "\n"
           ]
         }
@@ -59,24 +59,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SKVpdle8p8bk",
-        "outputId": "cfdef54c-bbe4-4dae-fb32-895fe3cacdc0"
+        "outputId": "bb247158-1641-48e6-f1eb-cecec482f7a4"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-05-28 19:23:30--  https://drive.usercontent.google.com/download?id=1-5e2bAdzfXmvpsiqL0X7_TyKr0b6KVza&export=download&authuser=1&confirm=t\n",
-            "Resolving drive.usercontent.google.com (drive.usercontent.google.com)... 64.233.189.132, 2404:6800:4008:c07::84\n",
-            "Connecting to drive.usercontent.google.com (drive.usercontent.google.com)|64.233.189.132|:443... connected.\n",
+            "--2024-05-29 08:51:10--  https://drive.usercontent.google.com/download?id=1-5e2bAdzfXmvpsiqL0X7_TyKr0b6KVza&export=download&authuser=1&confirm=t\n",
+            "Resolving drive.usercontent.google.com (drive.usercontent.google.com)... 142.250.145.132, 2a00:1450:4013:c14::84\n",
+            "Connecting to drive.usercontent.google.com (drive.usercontent.google.com)|142.250.145.132|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 251321 (245K) [application/octet-stream]\n",
             "Saving to: ‘interactions.csv’\n",
             "\n",
             "interactions.csv    100%[===================>] 245.43K  --.-KB/s    in 0.002s  \n",
             "\n",
-            "2024-05-28 19:23:30 (104 MB/s) - ‘interactions.csv’ saved [251321/251321]\n",
+            "2024-05-29 08:51:10 (96.2 MB/s) - ‘interactions.csv’ saved [251321/251321]\n",
             "\n"
           ]
         }
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "S_94mDNgqCUl"
       },
-      "execution_count": 74,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
       "metadata": {
         "id": "wpIdv-n3vDfZ"
       },
-      "execution_count": 75,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "Ef6JPCsNrcpI"
       },
-      "execution_count": 177,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -153,7 +153,7 @@
       "metadata": {
         "id": "_lN2zxkGsmYB"
       },
-      "execution_count": 178,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -165,14 +165,15 @@
       "metadata": {
         "id": "rjkYk4eW1_SZ"
       },
-      "execution_count": 179,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def bpr_loss(positive_scores, negative_scores, item_frequency, item_indices, a=0.5):\n",
-        "    weights = 1.0 / torch.sqrt(item_frequency[item_indices].float())\n",
+        "    # weights = 1.0 / torch.sqrt(item_frequency[item_indices].float())\n",
+        "    weights = 1.0 / item_frequency[item_indices].float()\n",
         "    loss = (-torch.log(torch.sigmoid(positive_scores - negative_scores)) * weights).mean()\n",
         "    reg_loss = a * weights.mean()\n",
         "    return loss + reg_loss"
@@ -180,19 +181,19 @@
       "metadata": {
         "id": "4BlLtXMEs1OB"
       },
-      "execution_count": 180,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "model = BPRModel(n_designs, n_items, features, dim=50).to(device)\n",
-        "optimizer = optim.Adam(model.parameters(), lr=0.001, weight_decay=0.01)"
+        "optimizer = optim.Adam(model.parameters(), lr=0.01, weight_decay=0.0001)"
       ],
       "metadata": {
         "id": "W1RdOSNntqmv"
       },
-      "execution_count": 181,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -235,44 +236,44 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FrWINXwUqXXM",
-        "outputId": "e2792cce-6de8-4277-88c0-baf2fc0c483f"
+        "outputId": "94eb58ab-4623-4b38-bb38-7eb3db1c1ce6"
       },
-      "execution_count": 182,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1, Loss: 385.121522963047\n",
-            "Epoch 2, Loss: 344.015248298645\n",
-            "Epoch 3, Loss: 335.3722930550575\n",
-            "Epoch 4, Loss: 334.1620962023735\n",
-            "Epoch 5, Loss: 333.01745414733887\n",
-            "Epoch 6, Loss: 331.31636464595795\n",
-            "Epoch 7, Loss: 330.79290598630905\n",
-            "Epoch 8, Loss: 329.34319776296616\n",
-            "Epoch 9, Loss: 328.8799862265587\n",
-            "Epoch 10, Loss: 326.6251026391983\n",
-            "Epoch 11, Loss: 325.4956593513489\n",
-            "Epoch 12, Loss: 324.02797079086304\n",
-            "Epoch 13, Loss: 323.5810977220535\n",
-            "Epoch 14, Loss: 321.5159893631935\n",
-            "Epoch 15, Loss: 321.514345228672\n",
-            "Epoch 16, Loss: 320.0829292535782\n",
-            "Epoch 17, Loss: 319.64409440755844\n",
-            "Epoch 18, Loss: 319.1051405072212\n",
-            "Epoch 19, Loss: 318.92776131629944\n",
-            "Epoch 20, Loss: 317.99119931459427\n",
-            "Epoch 21, Loss: 318.0650141239166\n",
-            "Epoch 22, Loss: 317.34606117010117\n",
-            "Epoch 23, Loss: 316.42103737592697\n",
-            "Epoch 24, Loss: 315.88643115758896\n",
-            "Epoch 25, Loss: 316.14790320396423\n",
-            "Epoch 26, Loss: 315.4399518966675\n",
-            "Epoch 27, Loss: 315.1131461262703\n",
-            "Epoch 28, Loss: 314.65364187955856\n",
-            "Epoch 29, Loss: 314.1431814432144\n",
-            "Epoch 30, Loss: 313.611967086792\n"
+            "Epoch 1, Loss: 299.13902109861374\n",
+            "Epoch 2, Loss: 273.67852783203125\n",
+            "Epoch 3, Loss: 263.9423939585686\n",
+            "Epoch 4, Loss: 262.5723223686218\n",
+            "Epoch 5, Loss: 259.96655428409576\n",
+            "Epoch 6, Loss: 256.92868530750275\n",
+            "Epoch 7, Loss: 258.66577285528183\n",
+            "Epoch 8, Loss: 255.45046645402908\n",
+            "Epoch 9, Loss: 255.08473962545395\n",
+            "Epoch 10, Loss: 250.4937175810337\n",
+            "Epoch 11, Loss: 248.75825661420822\n",
+            "Epoch 12, Loss: 247.15264761447906\n",
+            "Epoch 13, Loss: 245.16352504491806\n",
+            "Epoch 14, Loss: 244.1954089999199\n",
+            "Epoch 15, Loss: 242.49109503626823\n",
+            "Epoch 16, Loss: 241.09044387936592\n",
+            "Epoch 17, Loss: 240.71335616707802\n",
+            "Epoch 18, Loss: 239.89184266328812\n",
+            "Epoch 19, Loss: 239.14803498983383\n",
+            "Epoch 20, Loss: 239.67493495345116\n",
+            "Epoch 21, Loss: 240.46439629793167\n",
+            "Epoch 22, Loss: 238.84125924110413\n",
+            "Epoch 23, Loss: 238.2826208770275\n",
+            "Epoch 24, Loss: 239.9125131368637\n",
+            "Epoch 25, Loss: 238.0294712483883\n",
+            "Epoch 26, Loss: 239.26156905293465\n",
+            "Epoch 27, Loss: 239.51940208673477\n",
+            "Epoch 28, Loss: 238.02664676308632\n",
+            "Epoch 29, Loss: 237.68572235107422\n",
+            "Epoch 30, Loss: 238.5007007420063\n"
           ]
         }
       ]
@@ -295,7 +296,7 @@
         "\n",
         "    return top_indices\n",
         "\n",
-        "recommendations = recommend_items(model, design_idx=0, num_items=n_items)\n",
+        "recommendations = recommend_items(model, design_idx=20, num_items=n_items)\n",
         "print(\"Top recommended item indices:\", recommendations)"
       ],
       "metadata": {
@@ -303,26 +304,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CxAhKO1-wwSZ",
-        "outputId": "814606be-7688-455c-82e9-74f2871cad81"
+        "outputId": "2c9e7408-5db2-463c-d2d8-04d525d27471"
       },
-      "execution_count": 192,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Top recommended item indices: [161, 5, 4, 3, 563, 96, 261, 109, 351, 89, 405, 76, 572, 240, 124, 53, 281, 284, 884, 49, 25, 162, 97, 349, 271, 94, 51, 134, 280, 37]\n"
+            "Top recommended item indices: [5, 76, 201, 2684, 109, 89, 533, 3, 293, 118, 135, 4, 1487, 0, 370, 1907, 96, 25, 253, 26, 94, 892, 779, 864, 3941, 3021, 281, 2109, 120, 3609]\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "torch.save(model.state_dict(), 'model.pth')"
+      ],
       "metadata": {
         "id": "zABfD7Gl_CtD"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     }
   ]
